# rust-cuda-aes

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  blog-post.md  build.rs  rsync.sh  rust-toolchain.toml
benches/: Cargo.toml  aperf.rs  cpu.rs  gpu.rs  latency.rs  lib.rs  perf.rs  throughput.rs  variants.rs
blog-posts/: 0-measuring-cycles-per-byte.md  1-single-core-aes.md  2-multi-core-aes.md  3-gpu.md
crates/aes-core/: Cargo.toml
crates/aes-core/src/: lib.rs
crates/aes-cpu/: Cargo.toml
crates/aes-cpu/src/: aesni.rs  lib.rs  scalar.rs  vaes.rs
crates/aes-gpu/: Cargo.toml  build.rs
crates/aes-gpu/src/: lib.rs
kernels/: Cargo.toml
kernels/src/: lib.rs  tables.rs
src/: main.rs
